Fixed preview type labels alignment, html_entity_decoded copyright string in config.php, added selected post type groups to advertising and editor previews.
git-svn-id: https://plugins.svn.wordpress.org/mobiloud-mobile-app-plugin/trunk@1090257 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/mobiloud-app-preview.css
+++ b/assets/css/mobiloud-app-preview.css
@@ -55,10 +55,12 @@ body.mobiloud_page_mobiloud_menu_homepage #TB_title .tb-close-icon {
     float: left;
     margin: 0;
     margin-top: 0px;
+    display: inline-block;
 }
 
 .os-selection .radio-wrap label {
     float: left;
+    display: inline-block;
     margin-left: 10px;
     margin-top: 0;
 }
